--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                <button class="hero-button" type="button">Order Service</button>
+                <button class="hero-button" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
     
@@ -353,7 +353,72 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe">
+                <p  class="footer-descr">Subscribe</p>
+                <form class="footer-form">
+                    <input type="email" name="email" class="footer-input" placeholder="E-mail">
+                    <button type="submit" class="footer-btn">
+                        <span class="footer-descr">Subscribe</span>
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-subscribe"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
+
+    <div class="backdrop" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-btn" data-modal-close>
+                <svg class="modal-btn-icon">
+                    <use href="./images/icons.svg#icon-x-close"></use>
+                </svg>
+            </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+                <div class="modal-field">
+                    <label for="name" class="modal-label">Name</label>
+                    <input type="text" name="name" class="modal-input" autofocus>
+                    <svg class="modal-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-user-name"></use>
+                    </svg>
+                </div>
+                <div class="modal-field">
+                    <label for="phone" class="modal-label">Phone</label>
+                    <input type="tel" name="phone" class="modal-input">
+                    <svg class="modal-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-user-phone"></use>
+                    </svg>
+                </div>
+                <div class="modal-field">
+                    <label for="email" class="modal-label">Email</label>
+                    <input type="email" name="email" class="modal-input">
+                    <svg class="modal-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-user-email"></use>
+                    </svg>
+                </div>
+                <div class="modal-field">
+                    <label for="comment" class="modal-label">Comment</label>
+                    <textarea name="comment" class="modal-input" rows="6" placeholder="Text input"></textarea>
+                </div>
+                <div class="modal-field">
+                    <input type="checkbox" name="modal-check" id="modal-check" class="check-input visually-hidden">
+                    <label for="modal-check" class="check-text">
+                        <span class="checkbox-icon">
+                            <svg class="modal-checl-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-checkbox-conf"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the&nbsp;
+                        <a href="" class="check-link">Privacy Policy</a>
+                    </label>
+                </div>
+                <button type="submit" class="hero-button">Send</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
 </body>
 </html>
