--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-open" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="modal-btn-icon">
@@ -377,31 +377,31 @@
             </button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
-                <div class="modal-field">
-                    <label for="name" class="modal-label">Name</label>
-                    <input type="text" name="name" class="modal-input" autofocus>
+                <label for="name" class="modal-field">
+                    Name
+                    <input type="text" name="name" id="name" class="modal-input" autofocus>
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-user-name"></use>
                     </svg>
-                </div>
-                <div class="modal-field">
-                    <label for="phone" class="modal-label">Phone</label>
-                    <input type="tel" name="phone" class="modal-input">
+                </label>               
+                <label for="phone" class="modal-field">
+                    Phone
+                    <input type="tel" name="phone" id="phone" class="modal-input">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-user-phone"></use>
                     </svg>
-                </div>
-                <div class="modal-field">
-                    <label for="email" class="modal-label">Email</label>
-                    <input type="email" name="email" class="modal-input">
+                </label>
+                <label for="email" class="modal-field">
+                    Email
+                    <input type="email" name="email" id="email" class="modal-input">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-user-email"></use>
                     </svg>
-                </div>
-                <div class="modal-field">
-                    <label for="comment" class="modal-label">Comment</label>
-                    <textarea name="comment" class="modal-input" rows="6" placeholder="Text input"></textarea>
-                </div>
+                </label>
+                <label for="comment" class="modal-field">
+                    Comment
+                    <textarea name="comment" id="comment" class="modal-input" rows="6" placeholder="Text input"></textarea>
+                </label>
                 <div class="modal-field">
                     <input type="checkbox" name="modal-check" id="modal-check" class="check-input visually-hidden">
                     <label for="modal-check" class="check-text">
