--- a/index.html
+++ b/index.html
@@ -356,19 +356,21 @@
             <div class="subscribe">
                 <p  class="footer-descr">Subscribe</p>
                 <form class="footer-form">
-                    <input type="email" name="email" class="footer-input" placeholder="E-mail">
-                    <button type="submit" class="footer-btn">
-                        <span class="footer-descr">Subscribe</span>
-                        <svg class="subscribe-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-subscribe"></use>
-                        </svg>
-                    </button>
+                    <label for="email" class="footer-label">
+                        <input type="email" name="email" id="email" class="footer-input" placeholder="E-mail">
+                        <button type="submit" class="footer-btn">
+                            <span class="footer-descr">Subscribe</span>
+                            <svg class="subscribe-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-subscribe"></use>
+                            </svg>
+                        </button>
+                    </label>
                 </form>
             </div>
         </div>
     </footer>
 
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="modal-btn-icon">
@@ -377,31 +379,31 @@
             </button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
-                <label for="name" class="modal-field">
-                    Name
+                <div class="modal-field">
+                    <label for="name" class="modal-label">Name</label>
                     <input type="text" name="name" id="name" class="modal-input" autofocus>
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-user-name"></use>
                     </svg>
-                </label>               
-                <label for="phone" class="modal-field">
-                    Phone
+                </div>
+                <div class="modal-field">
+                    <label for="phone" class="modal-label">Phone</label>
                     <input type="tel" name="phone" id="phone" class="modal-input">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-user-phone"></use>
                     </svg>
-                </label>
-                <label for="email" class="modal-field">
-                    Email
+                </div>
+                <div class="modal-field">
+                    <label for="email" class="modal-label">Email</label>
                     <input type="email" name="email" id="email" class="modal-input">
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-user-email"></use>
                     </svg>
-                </label>
-                <label for="comment" class="modal-field">
-                    Comment
+                </div>
+                <div class="modal-field">
+                    <label for="comment" class="modal-label">Comment</label>
                     <textarea name="comment" id="comment" class="modal-input" rows="6" placeholder="Text input"></textarea>
-                </label>
+                </div>
                 <div class="modal-field">
                     <input type="checkbox" name="modal-check" id="modal-check" class="check-input visually-hidden">
                     <label for="modal-check" class="check-text">
