--- a/index.html
+++ b/index.html
@@ -356,15 +356,15 @@
             <div class="subscribe">
                 <p  class="footer-descr">Subscribe</p>
                 <form class="footer-form">
-                    <label for="email" class="footer-label">
-                        <input type="email" name="email" id="email" class="footer-input" placeholder="E-mail">
-                        <button type="submit" class="footer-btn">
-                            <span class="footer-descr">Subscribe</span>
-                            <svg class="subscribe-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-subscribe"></use>
-                            </svg>
-                        </button>
-                    </label>
+                    <label for="sub-email" class="footer-label">
+                        <input type="email" name="email" id="sub-email" class="footer-input" placeholder="E-mail">
+                    </label>    
+                    <button type="submit" class="footer-btn">
+                        Subscribe
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-subscribe"></use>
+                        </svg>
+                    </button>
                 </form>
             </div>
         </div>
