--- a/index.html
+++ b/index.html
@@ -381,24 +381,30 @@
             <form class="modal-form">
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Name</label>
-                    <input type="text" name="user-name" id="user-name" class="modal-input" autofocus>
-                    <svg class="modal-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-user-name"></use>
-                    </svg>
+                    <div class="modal-input-wrap">
+                        <input type="text" name="user-name" id="user-name" class="modal-input" autofocus>
+                        <svg class="modal-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-user-name"></use>
+                        </svg>
+                    </div>
                 </div>
                 <div class="modal-field">
                     <label for="user-phone" class="modal-label">Phone</label>
-                    <input type="tel" name="user-phone" id="user-phone" class="modal-input">
-                    <svg class="modal-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-user-phone"></use>
-                    </svg>
+                    <div class="modal-input-wrap">
+                        <input type="tel" name="user-phone" id="user-phone" class="modal-input">
+                        <svg class="modal-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-user-phone"></use>
+                        </svg>
+                    </div>
                 </div>
                 <div class="modal-field">
                     <label for="user-email" class="modal-label">Email</label>
-                    <input type="email" name="user-email" id="user-email" class="modal-input">
-                    <svg class="modal-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-user-email"></use>
-                    </svg>
+                    <div class="modal-input-wrap">
+                        <input type="email" name="user-email" id="user-email" class="modal-input">
+                        <svg class="modal-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-user-email"></use>
+                        </svg>
+                    </div>
                 </div>
                 <div class="modal-field">
                     <label for="user-comment" class="modal-label">Comment</label>
