8 upd input markup

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-open" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="modal-btn-icon" width="8" height="8">
@@ -410,11 +410,11 @@
                     <label for="user-comment" class="modal-label">Comment</label>
                     <textarea name="user-comment" id="user-comment" class="modal-input" rows="6" placeholder="Text input"></textarea>
                 </div>
-                <div class="modal-field">
-                    <input type="checkbox" name="modal-check" id="modal-check" class="check-input visually-hidden">
-                    <label for="modal-check" class="check-text">
+                <div class="modal-check">
+                    <input type="checkbox" name="user-privacy" id="user-privacy" class="check-input visually-hidden" value="true" >
+                    <label for="user-privacy" class="check-text">
                         <span class="checkbox-icon">
-                            <svg class="modal-checl-icon" width="16" height="16">
+                            <svg class="modal-checl-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-checkbox-conf"></use>
                             </svg>
                         </span>
