--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-open" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="modal-btn-icon" width="8" height="8">
@@ -417,7 +417,7 @@
                             <svg class="modal-checl-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-checkbox-conf"></use>
                             </svg>
-                        </span>
+                        </span>    
                         I accept the terms and conditions of the&nbsp;
                         <a href="" class="check-link">Privacy Policy</a>
                     </label>
