--- a/index.html
+++ b/index.html
@@ -370,7 +370,9 @@
         </div>
     </footer>
 
-    <div class="backdrop is-open" data-modal>
+    <!-- is-open -->
+
+    <div class="backdrop" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="modal-btn-icon" width="8" height="8">
