--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
     <!-- is-open -->
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-open" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="modal-btn-icon" width="8" height="8">
@@ -424,11 +424,11 @@
                         <a href="" class="check-link">Privacy Policy</a>
                     </label>
                 </div>
-                <button type="submit" class="hero-button">Send</button>
+                <button type="submit" class="modal-button">Send</button>
             </form>
         </div>
     </div>
 
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
 </body>
 </html>
